--- a/templates/main/bookings.html.twig
+++ b/templates/main/bookings.html.twig
@@ -20,7 +20,7 @@
                 {% endfor %}
 
                 <!-- Formular für Buchung -->
-                <form method="post" action="{{ path('buchung_speichern') }}">
+                <form method="post" action="{{ path('save_booking') }}">
                     <div class="row">
                         <!-- Linke Seite -->
                         <div class="col-md-6">
