--- a/templates/admin/edit_user.html.twig
+++ b/templates/admin/edit_user.html.twig
@@ -7,12 +7,12 @@
         <h1>Benutzer bearbeiten</h1>
         {{ form_start(form) }}
         <div class="form-group">
-            {{ form_label(form.vorname) }}
-            {{ form_widget(form.vorname, { 'attr': { 'class': 'form-control' } }) }}
+            {{ form_label(form.firstName) }}
+            {{ form_widget(form.firstName, { 'attr': { 'class': 'form-control' } }) }}
         </div>
         <div class="form-group">
-            {{ form_label(form.name) }}
-            {{ form_widget(form.name, { 'attr': { 'class': 'form-control' } }) }}
+            {{ form_label(form.lastName) }}
+            {{ form_widget(form.lastName, { 'attr': { 'class': 'form-control' } }) }}
         </div>
         <div class="form-group">
             {{ form_label(form.email) }}
