--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -57,17 +57,17 @@
                 {% if app.user %}
                     {% if is_granted('ROLE_ADMIN') %}
                         <li class="nav-item">
-                            <a class="nav-link" href="{{ path('benutzer_liste') }}">Benutzerverwaltung</a>
+                            <a class="nav-link" href="{{ path('user_liste') }}">Benutzerverwaltung</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="{{ path('buchungsuebersicht') }}">Buchungsübersicht</a>
+                            <a class="nav-link" href="{{ path('bookings_overview') }}">Buchungsübersicht</a>
                         </li>
                     {% endif %}
                     <li class="nav-item">
                         <a class="nav-link" href="{{ path('dashboard') }}">Dashboard</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ path('buchungen') }}">Buchungen</a>
+                        <a class="nav-link" href="{{ path('bookings') }}">Buchungen</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="{{ path('profile') }}">Profil</a>
