change table to desk

--- a/templates/admin/bookings_overview.html.twig
+++ b/templates/admin/bookings_overview.html.twig
@@ -17,7 +17,7 @@
                 <th>EndTime</th>
                 <th>Floor</th>
                 <th>Room</th>
-                <th>Table</th>
+                <th>Desk</th>
             </tr>
             </thead>
             <tbody>
@@ -31,7 +31,7 @@
                     <td>{{ booking.endTime|date('H:i') }}</td>
                     <td>{{ booking.floor }}</td>
                     <td>{{ booking.room }}</td>
-                    <td>{{ booking.table }}</td>
+                    <td>{{ booking.desk }}</td>
                 </tr>
             {% else %}
                 <tr>
