--- a/templates/main/bookings.html.twig
+++ b/templates/main/bookings.html.twig
@@ -65,12 +65,12 @@
                             </div>
 
                             <div class="mb-3">
-                                <label for="table" class="form-label">Table:</label>
-                                <select id="table" name="table" class="form-select">
-                                    <option value="1">Table 1</option>
-                                    <option value="2">Table 2</option>
-                                    <option value="3">Table 3</option>
-                                    <option value="4">Table 4</option>
+                                <label for="desk" class="form-label">Desk:</label>
+                                <select id="desk" name="desk" class="form-select">
+                                    <option value="1">Desk 1</option>
+                                    <option value="2">Desk 2</option>
+                                    <option value="3">Desk 3</option>
+                                    <option value="4">Desk 4</option>
                                 </select>
                             </div>
                         </div>
