--- a/templates/admin/bookings_overview.html.twig
+++ b/templates/admin/bookings_overview.html.twig
@@ -4,7 +4,7 @@
 
 {% block body %}
     <div class="container mt-5">
-        <h1 class="mb-4">Booking Overview</h1>
+        <h1 class="mb-4">{{ 'booking_overview'|trans }}</h1>
 
         <table class="table table-striped table-hover table-bordered">
             <thead class="table-dark">
